@@ -2062,3 +2062,5 @@ Version 5.1
 
 Fixed issue with vchars.mta and symbols.mta not being installed in
 the appropriate metafile library location, with help from Rob G.
+
+Added ability to give quoted strings to output= directive in rfluxmtx.
